@@ -1,6 +1,7 @@
 package com.nurtivillage.java.nutrivillageApplication.controller;
 
 import java.io.File;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -54,7 +55,7 @@ public class ProductController {
             return  new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         }catch(Exception e){
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -67,11 +68,11 @@ public class ProductController {
             List<Inventory> inventory = inventoryService.getProductInventory(product.get());
             product.get().setReview(reviews);
             // product.get().setVariant(inventory);
-            ApiResponseService res = new ApiResponseService("product info",true,List.of(product.get()));
+            ApiResponseService res = new ApiResponseService("product info",true,Arrays.asList(product.get()));
             return  new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         }catch(Exception e){
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -80,11 +81,11 @@ public class ProductController {
     public ResponseEntity<ApiResponseService> insertProduct(@Valid @RequestBody Product product){
         try {
             Product insetProduct = productService.insertProduct(product);
-            ApiResponseService res = new ApiResponseService("product create",true,List.of(insetProduct));
+            ApiResponseService res = new ApiResponseService("product create",true,Arrays.asList(insetProduct));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         } catch (Exception e) {
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -93,11 +94,11 @@ public class ProductController {
     public ResponseEntity<ApiResponseService> editProduct(@RequestBody Product product){
         try {
             Product data = productService.insertProduct(product);
-            ApiResponseService res = new ApiResponseService("update product",true,List.of(data));
+            ApiResponseService res = new ApiResponseService("update product",true,Arrays.asList(data));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         } catch (Exception e) {
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     } 
@@ -106,11 +107,11 @@ public class ProductController {
     public ResponseEntity<ApiResponseService> deleteProduct(@PathVariable Long id){
         try {
             String msg = productService.DeleteProduct(id);
-            ApiResponseService res = new ApiResponseService(msg,true,List.of(id));
+            ApiResponseService res = new ApiResponseService(msg,true,Arrays.asList(id));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         } catch (Exception e) {
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     } 
@@ -119,11 +120,11 @@ public class ProductController {
     public ResponseEntity<ApiResponseService> highlighterProduct(){
         try {
             List<Product> data = productService.highlighterProduct();
-            ApiResponseService res = new ApiResponseService("List of highlighter",true,List.of(data));
+            ApiResponseService res = new ApiResponseService("List of highlighter",true,Arrays.asList(data));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         } catch (Exception e) {
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -132,11 +133,11 @@ public class ProductController {
     public ResponseEntity<ApiResponseService> categoryProductLIst(@PathVariable Integer categoryId){
         try {
             List<Product> data = productService.categoryProductLIst(categoryId);
-            ApiResponseService res = new ApiResponseService("List of highlighter",true,List.of(data));
+            ApiResponseService res = new ApiResponseService("List of highlighter",true,Arrays.asList(data));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.OK);
         } catch (Exception e) {
             System.out.println(e);
-            ApiResponseService res = new ApiResponseService(e.getMessage(),false,List.of("error"));
+            ApiResponseService res = new ApiResponseService(e.getMessage(),false,Arrays.asList("error"));
             return new ResponseEntity<ApiResponseService>(res,HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
